--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,10 @@ spring.datasource.url=jdbc:mysql://localhost:3306/demo?useSSL=false&serverTimezo
 spring.datasource.username=root
 spring.datasource.password=admin123
 
+# PORT
+server.port=8082
+server.servlet.context-path=/ThymeleafDemo
+
 # Hibernate
 
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
